--- a/Andrea/assets/css/style.css
+++ b/Andrea/assets/css/style.css
@@ -5,7 +5,7 @@
 }
 body {
   margin: 0;
-  background-color: #ffffff; 
+  background-color: #F5F5F5; 
   font-family: Arial, sans-serif;
 }
 /*****Estilos pagina de inicio******/
